# WKSThings

./: .gitignore  .polyscope.ini  CMakeLists.txt  hks_curves.csv  imgui.ini  plot_curves.py  wks_curves.csv
notebooks/: wks_walkthrough.ipynb
src/: corresponder.cpp  corresponder.h  descriptor.cpp  descriptor.h  main.cpp  mesh.cpp  mesh.h  operators.cpp  operators.h  spectrum.cpp  spectrum.h  visualizer.cpp  visualizer.h
